Refactor how regions are defined and added so that they can be added dynamically as needed